--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="card">
         <div class="card-header">
           <h6>National Emergency Number</h6>
-          <button class="heart"><img src="assets/heart.png" alt=""></button>
+          <button class="heart">♡</button>
         </div>  
         
         <p class="number">999</p>
@@ -47,7 +47,7 @@
       <div class="card">
         <div class="card-header">
           <h6>Police Helpline Number</h6>
-          <button class="heart"><img src="assets/heart.png" alt=""></button>
+          <button class="heart">♡</button>
         </div>
         <p class="number">999</p>
         <span class="badge">Police</span>
@@ -60,7 +60,7 @@
       <div class="card">
         <div class="card-header">
           <h6>Fire Service Number</h6>
-           <button class="heart"><img src="assets/heart.png" alt=""></button>
+           <button class="heart">♡</button>
         </div>
         <p class="number">999</p>
         <span class="badge">Fire</span>
@@ -73,7 +73,7 @@
       <div class="card">
         <div class="card-header">
           <h6>Ambulance Service</h6>
-           <button class="heart"><img src="assets/heart.png" alt=""></button>
+           <button class="heart">♡</button>
         </div>
         <p class="number">1994-999999</p>
         <span class="badge">Health</span>
@@ -86,7 +86,7 @@
       <div class="card">
         <div class="card-header">
           <h6>Women & Child Helpline</h6>
-           <button class="heart"><img src="assets/heart.png" alt=""></button>
+           <button class="heart">♡</button>
         </div>
         <p class="number">109</p>
         <span class="badge">Help</span>
@@ -99,7 +99,7 @@
       <div class="card">
         <div class="card-header">
           <h6>Anti-Corruption Helpline</h6>
-           <button class="heart"><img src="assets/heart.png" alt=""></button>
+           <button class="heart">♡</button>
         </div>
         <p class="number">106</p>
         <span class="badge">Govt</span>
@@ -112,7 +112,7 @@
       <div class="card">
         <div class="card-header">
           <h6>Electricity Helpline</h6>
-           <button class="heart"><img src="assets/heart.png" alt=""></button>
+           <button class="heart">♡</button>
         </div>
         <p class="number">16216</p>
         <span class="badge">Electricity</span>
@@ -125,7 +125,7 @@
       <div class="card">
         <div class="card-header">
           <h6>Brac Helpline</h6>
-           <button class="heart"><img src="assets/heart.png" alt=""></button>
+           <button class="heart">♡</button>
         </div>
         <p class="number">16445</p>
         <span class="badge">NGO</span>
@@ -138,7 +138,7 @@
       <div class="card">
         <div class="card-header">
           <h6>Bangladesh Railway Helpline</h6>
-           <button class="heart"><img src="assets/heart.png" alt=""></button>
+           <button class="heart">♡</button>
         </div>
         <p class="number">163</p>
         <span class="badge">Travel</span>
